src/objects/Class__c.object
<CustomObject>
    <fields>
        <fullName>Board__c</fullName>
        <label>Board</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RAJ</fullName>
                </value>
                <value>
                    <fullName>CBSE</fullName>
                </value>
                <value>
                    <fullName>BIHAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Class_Teacher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Class Teacher</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>class</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DetailedDescription__c</fullName>
        <label>DetailedDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maxsize__c</fullName>
        <label>Maxsize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Female_Student__c</fullName>
        <label>No_of_Female_Student</label>
        <summaryFilterItems>
            <field>Student__c.sex__c</field>
            <operation>equals</operation>
            <value>Female</value>
        </summaryFilterItems>
        <summaryForeignKey>Student__c.class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NumberOfStudents__c</fullName>
        <label>NumberOfStudents(</label>
        <summaryForeignKey>Student__c.class__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>myCount__c</fullName>
        <label>myCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>